sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
    if plusPetit(k+1,k){
       ^AlgBubbleSort1:8: error: illegal start of simple expression
  }
  ^